Fixed sculp-gallery on mobile

--- a/assets/css/_more-shame.sass
+++ b/assets/css/_more-shame.sass
@@ -1,10 +1,10 @@
 
 /* messing around with centering methods of the sculpture gallery */
 
-.slideshow.sculp figure img
-  position: absolute
-  // left: 50%
-  bottom: 0
+// .slideshow.sculp figure img
+//   position: absolute
+//   // left: 50%
+//   bottom: 0
 
 //  +transform(translate(-50%,0))    // mixin not found?! compass error
   // +transform(translate(0,-50%))
