--- a/assets/css/components/_gallery.scss
+++ b/assets/css/components/_gallery.scss
@@ -17,6 +17,8 @@
 							/*width: 100%;*/
 						max-height:100%;
 						max-width: 100%;
+						position: absolute;
+						bottom: 0;
 					}
 
 					// .slideshow figure div.twotimes{
